# test-chatbot

./: README.md  pyproject.toml  requirements.txt
app/: config.py  llm.py  main.py  memory.py  rag.py  vectorstore.py
chroma_nec/: chroma.sqlite3
chroma_wattmonk/: chroma.sqlite3
frontend/: app.py
ingest/: ingest.py
